﻿Subtitle Edit Changelog

3.6.13 (xth May 2023) BETA
* NEW:
   * Add shortcut for text "color picker" - thx rRobis
   * Add new subtitle format "nVivo transcript" - thx Ashin
* IMPROVED:
   * Update Hebrew translation - thx אלחנן 
   * Update Slovenian translation - thx Jadran
* FIXED:
   * Fix "Add embedded subtitles" with ANSI encoding - thx Cyberyoda1411
   * Fix running Whisper CPP/Const-me after setting folder for Whisper OpenAI - thx rsmith02ct
   * Fix possible crash in batch convert with overwrite - thx chensimmons
   * Fix possible crash after "Options - Settings" - thx JDTR75
   * Fix undo/redo for text


3.6.12 (26th March 2023)
* NEW:
   * Add/remove embedded subtitles to/from video files - thx David
   * Add Whisper via GPU (Const-me, Windows-only) - thx albino1/darnn/smith02ct
   * Allow video cut when exporting video with burned-in sub - thx Daniela/David/Leon
   * Batch convert: Image-based format to PNG with time code - thx Ninelpienel 
   * Add new shortcut for split + auto-br - thx oep42
   * Add "Sort by" in Batch convert" - thx Masina86
   * Add image format "Rhozet Harmonic" (read-only) - thx Arianna
   * Add "Toggle custom surround text with" shortcut - thx HadiSparrow
   * Add "Go to next/previous time code from video position" shortcuts - thx faon-92
   * Add option to change search engine in "Spell check" - thx Keddyan
   * Add reading of TTML images from ISMT - thx azrie
* IMPROVED:
   * Update French translation - thx Pierre
   * Update Hungarian translation - thx Zityi
   * Update Brazilian Portuguese translation - thx igorruckert
   * Update Bulgarian translation - thx Калин
   * Update Korean translation - thx domddol
   * Update Italian translation - thx bovirus
   * Update Portuguese translation - thx hugok79
   * Update Spanish translations (es-ES/ex-MX/es-AR) - thx paconaranjo
   * Update Russian translation - thx elfriob
   * Update Polish translation - thx admas
   * Update Greek translation - thx PMitsakis